package src.interfaces;

public interface Runnable {
    public void run(int x, int y);
}
