package src.interfaces;

public interface Snortable {
    public void snort();
}
