package src.interfaces;

import src.abs.Creature;

public interface Waiting {
    public String waiting(int duration, Creature creature);
}
