package src.interfaces;

public interface Silent {
    public String sayNothing();
}
