package src.interfaces;

public interface Standing {
    public String stand();
}
